ADD HashiCorp Consul and Vault docker containers to secure access to future API.